--- a/App/src/App.css
+++ b/App/src/App.css
@@ -2,9 +2,17 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'cursive';
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 body {
-  background-color: rgb(0, 128, 128);
+  background-color: #e7eaf6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Optionally set height to 100vh for full viewport height */
 }
+
+
+
